CHANGES for LIRE
================

2016-01-26
==========
  - Changed conversion of images to TYPE_3BYTE_BGR in ImageUtils.
  - Fixed a bug with GenericFastImageSearcher using multiple fields.
  - Added example for local feature based search.

2016-01-25
==========
  - Bugfix in ParallelIndexer, adding Preprocessor for images in local sampling routine
    (based on bug descrition of Myrtha Fuog)

2015-11-06
==========
  - Invalid character in comments removed (based on pull request of Bart Van Bos)
  - Adapted .gitignore from https://github.com/boeboe/LIRE/ fork
  - Adapted pom.xml from https://github.com/boeboe/LIRE/ fork

2015-09-22
==========
  - Changed MetricSpaces query mode to term boosting to reduce size of query.
  - Added statistics to docs.

2015-09-09
==========
  - Added three distance functions to MetricsUtils

2015-09-09
==========
  - API change and docs on metric indexing.

2015-09-09
==========
  - DocValues implementation and tests for indexing and search.
  - documentation on metric spaces and docvalues.
  - Changed the RAM buffer size of IndexWriter instances in LuceneUtils to cope with lots of small files more easily.

2015-09-07
==========
  - pom.xml patch by Lukas Knoch

2015-09-04
==========
  - Documentation, error message updates.
  - implemented and tested net.semanticmetadata.lire.searchers.MetricSpacesImageSearcher, on 100k images it
    had similar performance to in-memory search w/o the startup delay.

2015-08-26
==========
  - Indexing based on Metric Spaces mostly finished, with some tests still to be done.
    see MetricSpacesTest for samples.
  - Change in file handling in ParallelIndexer, now using MappedByteBuffer / NIO.
  - Added support for hash method selection to GlobalDocumentBuilder and ParallelIndexer

2015-08-20
==========
  - Converted ParallelExtractor to using LinkedBlockingQueue

2015-08-20
==========
  - Speeded up extraction of PHOG by ~ 40%.

2015-08-17
==========