@@ -1,5 +1,5 @@
 #Properties of this specific CALIPH build
-#Tue, 26 Jan 2016 13:25:17 +0100
+#Thu, 28 Jan 2016 13:06:31 +0100
 #
 # This file is part of the LIRE project: http://lire-project.net
 # LIRE is free software; you can redistribute it and/or modify
@@ -44,5 +44,5 @@
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2016/01/26 13\:25
-build-number=261
+build-date=2016/01/28 13\:06
+build-number=264
